--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -7,4 +7,6 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(
         lab2
         src/main.cpp
+        src/lib/ConverterCommand.h
+        src/lib/ConversionType.h
 )
