lab1 добавил чтение CSV в vector2d

--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(
         src/main.cpp
         src/lib/ConverterCommand.h
         src/lib/ConversionType.h
+        src/lib/CsvReader.h
 )
