lab1 добавил класс MealyStateMachine

--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,13 +1,18 @@
 cmake_minimum_required(VERSION 3.23)
 
-project(lab2)
+project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
-        lab2
+        lab1
         src/main.cpp
         src/lib/ConverterCommand.h
         src/lib/ConversionType.h
         src/lib/CsvReader.h
+        src/lib/StateMachineConverter.h
+        src/lib/ConvertingStrategy.h
+        src/lib/MealyToMoorConvertingStrategy.h
+        src/lib/MealyStateMachineBuilder.h
+        src/lib/MealyStateMachine.h
 )
