lab1 поправил структуру файлов

--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(
         lab1
         src/main.cpp
-        src/lib/ConverterCommand.h
-        src/lib/ConversionType.h
-        src/lib/CsvReader.h
-        src/lib/StateMachineConverter.h
-        src/lib/ConvertingStrategy.h
-        src/lib/MealyToMoorConvertingStrategy.h
-        src/lib/MealyStateMachineBuilder.h
-        src/lib/MealyStateMachine.h
+        src/lib/command/ConverterCommand.h
+        src/lib/converter/ConversionType.h
+        src/lib/csv/CsvReader.h
+        src/lib/converter/StateMachineConverter.h
+        src/lib/converter/ConvertingStrategy.h
+        src/lib/converter/MealyToMoorConvertingStrategy.h
+        src/lib/statemachine/MealyStateMachineBuilder.h
+        src/lib/statemachine/MealyStateMachine.h
 )
